# lazyVikunjaVector

./: CMakeLists.txt  README.md  main.cpp
include/: device.hpp  vector.hpp
